# scarab

./: .gitignore  Makefile  README.md  criterion.opam  criterion_derive.opam  dune  dune-project  dune_bench.opam  scarab.opam
criterion/: bench.ml  bench.mli  benchmark.ml  dune  reporter.ml  runner.ml  suite.ml  test.ml  time.ml
criterion-derive/: bench.ml  dune
criterion-derive/test/: dune  test.ml
dune-bench/: dune  dune_bench.ml
scarab/: bench.ml  dune  measure.ml  reporter.ml  scarab.ml
test/: demo.tape  dune  run_test.ml
